--- a/src/app/main-app/nav-bar/nav-bar.component.html
+++ b/src/app/main-app/nav-bar/nav-bar.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar class="mat-elevation-z4">
 
-  <p>Management</p>
-
-
+  <button mat-button class="btn" (click)="onClickHomeBtn()">Management</button>
 
   <span class="right-side"></span>
 
   <button mat-button class="btn" (click)="onClickHomeBtn()">Acas&#259;</button>
+
+  <button mat-button class="btn" (click)="onClickSessionsBtn()">Sesiuni</button>
 
   <button mat-button class="account-btn"
           [matMenuTriggerFor]="menu1">
