--- a/src/app/main-app/footer/footer.component.css
+++ b/src/app/main-app/footer/footer.component.css
@@ -1,33 +1,30 @@
-.container{
-  width: 100%;
-  height: 100px;
-}
-
-mat-grid-tile{
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: black;
   color: white;
-  padding: 0;
-  margin: 0;
-}
-.mat-grid-tile-content{
-  padding: 0;
-  margin: 0;
 }
 
-.item{
+.column {
+  padding: 10%;
+  justify-content: center;
+  display: grid;
+  justify-items: center;
+}
+
+.row {
+  margin-bottom: 12%;
+  font-family: "Helvetica", sans-serif;
   font-size: 1rem;
 }
 
-.top, .contact{
-  margin-top: 15%;
-  font-size: 1.5rem;
+.row-header {
   margin-bottom: 30%;
+  font-family: "Helvetica", sans-serif;
+  font-size: 1.5rem;
 }
 
-/*.contact{*/
-/*  margin-top: -25%;*/
-/*}*/
-
-.copyright{
+.copyright {
   background-color: black;
   color: white;
   width: 100%;
@@ -35,6 +32,13 @@ mat-grid-tile{
   padding-bottom: 1%;
 }
 
-.management{
-  display: block;
+.first-column-row1, .first-column-row2 {
+  font-size: 2rem;
+  font-family: "Helvetica", sans-serif;
 }
+
+.first-column-row1 {
+  padding-top: 30%;
+}
+
+
