--- a/src/app/main-app/profile/profile.component.css
+++ b/src/app/main-app/profile/profile.component.css
@@ -1,27 +1,27 @@
-.container{
+.container {
   min-height: 91%;
   min-width: 100%;
   display: inline-flex;
 }
 
-.left{
+.left {
   width: 25%;
   padding-top: 3%;
   display: block;
   background-color: white;
 }
 
-.right{
+.right {
   width: 75%;
-  background-color: rgba(205,205,205,0.37);
+  background-color: rgba(205, 205, 205, 0.37);
   padding: 5%;
 }
 
-.initials{
+.initials {
   padding-top: 45%;
 }
 
-.left-menu{
+.left-menu {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -29,14 +29,14 @@
   align-items: center;
 }
 
-.name-label{
-  font-size:1.8rem;
+.name-label {
+  font-size: 1.8rem;
   font-weight: bold;
   padding-top: 10%;
   font-family: "Calibri", sans-serif;
 }
 
-.circle{
+.circle {
   height: 200px;
   width: 200px;
   border-radius: 50%;
@@ -44,7 +44,7 @@
   text-align: center;
   font-size: 3rem;
   font-weight: 500;
-  border : 5px solid #0051CB;
+  border: 5px solid #0051CB;
 }
 
 /*right*/
@@ -60,7 +60,7 @@ input[type=text] {
   font-size: 20px;
 }
 
-.edit-btn, .logout-btn{
+.edit-btn, .logout-btn {
   width: 15%;
   background-color: #0051CB;
   border-radius: 10px;
@@ -75,7 +75,7 @@ input[type=text] {
   align-self: center;
 }
 
-.logout-btn{
+.logout-btn {
   width: 75%;
   font-size: 20px;
   margin-left: 0;
@@ -86,10 +86,10 @@ input[type=text] {
 }
 
 .edit-btn:disabled, .logout-btn:disabled {
-  background-color: rgba(0,50,136,0.37);
+  background-color: rgba(0, 50, 136, 0.37);
 }
 
-.logout-div{
+.logout-div {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -106,13 +106,13 @@ input[type=text] {
   padding-bottom: 5%;
 }
 
-.form-label{
+.form-label {
   color: black;
-  font-size:1.2rem;
+  font-size: 1.2rem;
   font-family: "Calibri", sans-serif;
 }
 
-.info-item{
+.info-item {
   padding-top: 1%;
 }
 
