--- a/src/app/main-app/footer/footer.component.html
+++ b/src/app/main-app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="column">
     <div class="first-column-row1">Management</div>
-    <div class="first-column-row2">Licenta</div>
+    <div class="first-column-row2">Licen&#355;&#259;</div>
   </div>
   <div class="column">
     <div class="row-header">Link-uri</div>
-    <div class="row" (click)="onClickHome()">Acasa</div>
+    <div class="row" (click)="onClickHome()">Acas&#259;</div>
     <div class="row" (click)="onClickProfile()">Profilul meu</div>
     <div class="row" (click)="onClickSessions()">Sesiuni</div>
   </div>
