--- a/src/app/main-app/home-page/home-page.component.html
+++ b/src/app/main-app/home-page/home-page.component.html
@@ -1,10 +1,21 @@
-<div class="container">
-  <p class="top">Date in timp real</p>
+<div class="content-wrapper">
 
-  <canvas baseChart class="chart"
-          [data]="lineChartData"
-          [options]="lineChartOptions"
-          [type]="lineChartType">
-  </canvas>
+  <div class="temp-container">
+    <div class="content-container mat-elevation-z4">
 
+      <div class="container">
+        <p class="top">Date &#238;n timp real</p>
+
+        <hr>
+
+        <canvas baseChart class="chart"
+                [data]="lineChartData"
+                [options]="lineChartOptions"
+                [type]="lineChartType">
+        </canvas>
+
+      </div>
+
+    </div>
+  </div>
 </div>
