--- a/src/app/main-app/login/login.component.html
+++ b/src/app/main-app/login/login.component.html
@@ -6,28 +6,28 @@
   <div class="right">
     <div class="form-container">
       <div class="welcome">
-        <label>Bine ai revenit!</label>
+        <p>Bine ai revenit!</p>
       </div>
       <div class="title">
-        <label>Intra in cont</label>
+        <p>Intr&#259; &#238;n cont</p>
       </div>
 
       <div class="form">
         <form>
           <label class="form-label" for="email">Email</label>
-          <input type="text" id="email" name="email" [(ngModel)]="this.user.email">
+          <input type="text" id="email" name="email" autocomplete="email" [(ngModel)]="this.user.email">
 
           <label class="form-label" for="password">Password</label>
-          <input type="password" id="password" name="password" [(ngModel)]="this.user.password">
+          <input type="password" id="password" name="password" autocomplete="off" [(ngModel)]="this.user.password">
           <div class="btn-div">
-            <button class="button" (click)="login()">Continua</button>
+            <button class="button" (click)="login()">Continu&#259;</button>
           </div>
 
         </form>
       </div>
 
       <div class="btn-div">
-        <label class="form-label">Nu ai un cont? Creeaza un <a href="/register">cont</a></label>
+        <p class="form-label">Nu ai un cont? Creeaz&#259; un <a href="/register">cont</a></p>
       </div>
 
     </div>
