--- a/src/app/main-app/register/register.component.html
+++ b/src/app/main-app/register/register.component.html
@@ -6,32 +6,32 @@
   <div class="right">
     <div class="form-container">
       <div class="welcome">
-        <label>Bine ai venit!</label>
+        <p>Bine ai venit!</p>
       </div>
       <div class="title">
-        <label>Creaza-ti un cont</label>
+        <p>Creaz&#259;-&#355;i un cont</p>
       </div>
 
       <div class="form">
         <form>
           <label class="form-label" for="name">Nume</label>
-          <input type="text" id="name" name="name" [(ngModel)]="this.user.name">
+          <input type="text" id="name" name="name" autocomplete="name" [(ngModel)]="this.user.name">
 
           <label class="form-label" for="email">Email</label>
-          <input type="text" id="email" name="email" [(ngModel)]="this.user.email">
+          <input type="text" id="email" name="email" autocomplete="email" [(ngModel)]="this.user.email">
 
           <label class="form-label" for="password">Password</label>
-          <input type="password" id="password" name="password" [(ngModel)]="this.user.password">
+          <input type="password" id="password" name="password" autocomplete="off" [(ngModel)]="this.user.password">
 
           <div class="btn-div">
-            <button class="button" (click)="register()">Continua</button>
+            <button class="button" (click)="register()">Continu&#259;</button>
           </div>
 
         </form>
       </div>
 
       <div class="btn-div">
-        <label class="form-label">Ai deja cont? Intra in <a href="/login">cont</a></label>
+        <p class="form-label">Ai deja cont? Intr&#259; &#238;n <a href="/login">cont</a></p>
       </div>
 
     </div>
