--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,26 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.temp-container {
+  -webkit-flex: 1;
+  flex: 1;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
+.content-wrapper {
+  display: -webkit-flex;
+  display: flex;
+  height: 91%;
+  background-color: #cccccc;
+}
+
+.content-container {
+  width: 90%;
+  background-color: white;
+  border-radius: 5px;
+  padding: 25px;
+  margin: 20px;
+}
